--- a/FrontEnd/src/main.css
+++ b/FrontEnd/src/main.css
@@ -62,6 +62,10 @@ textarea {
     color: #000;
 }
 
+input[type="password"] {
+    margin-bottom: 30px;
+}
+
 label,
 button {
     margin-top: 1rem;
@@ -69,6 +73,10 @@ button {
 
 button {
     padding: 0.5rem;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 .instructions {
